add: 支持添加功能

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: rgba(27, 38, 54, 1);
-    text-align: center;
+    /* text-align: center; */
     color: white;
 }
 
@@ -22,5 +22,5 @@ body {
 
 #app {
     height: 100vh;
-    text-align: center;
+    /* text-align: center; */
 }
